test/invalid/var-recursive-nonfunc.js
var x = [[0], [x]];
x; // should fail, because a. it's an infinite type, and b. in javascript the value of [x] above will be [undefined]
